docs: update openAPI specs about the search and delete endpoints
